added payment method in cart ,create order page , correct some css in about page

--- a/src/pages/about/about.css
+++ b/src/pages/about/about.css
@@ -19,7 +19,7 @@
   .about-container h3 {
     font-size: 22px;
     margin-top: 20px;
-    color: #4a90e2; /* Accent color for subheadings */
+    color: #ffffff; /* Accent color for subheadings */
   }
   
   .about-container p {
