--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -4,10 +4,9 @@ footer{
     /* position: fixed;
     bottom: 0;
     left: 0; */
-    position: absolute;
+    /* position: absolute;
     bottom: 0;
-    left: 0;
-    
+    left: 0;   */
 }
 
 .footer-logo{
