--- a/src/index.css
+++ b/src/index.css
@@ -21,14 +21,16 @@
 
 }
 
-html,body{
+/* html{
     height: 100%;
-}
+} */
+
 
 body{
     background: var(--theme-bg-primary);
-    color: var(--theme-text);
-            
+    color: var(--theme-text);        
+    /* position: relative; 
+    min-height: 100%; */
 }
 
 .section{
